# img-vector

./: Main.hs  image.cabal  img-vector.cabal  img.c  img.h
Data/Vector/: Image.hs
Data/Vector/Image/: FFT.hs  IO.hs  Image.hs  Matrix.hs
Data/Vector/Image/Color/: RGB.hs  YUV.hs
cbits/: fftw.c  img.c  img.h
sample/: img-filter.hs
tests/: test.hs
