name:                img-vector
version:             0.1.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Junji Hashimoto
maintainer:          junji.hashimoto@gmail.com
-- copyright:           
category:            Graphics
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

flag sample
  description: Build sample programs
  default: False

library
  exposed-modules:     Data.Vector.Image
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base ==4.*
                     , vector
                     , hmatrix
  -- hs-source-dirs:      
  default-language:    Haskell2010
  extra-libraries:     png
                     , jpeg
  c-sources:           cbits/img.c
  include-dirs:        cbits
  cc-options:          -fPIC
  ghc-options:         -Wall

executable img-filter
  if flag(sample)
    buildable: True
  else
    buildable: False
  main-is:             img-filter.hs
  build-depends:       base ==4.*
                     , vector
                     , hmatrix
                     , img-vector
                     , optparse-applicative
  hs-source-dirs:      sample
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  main-is:             test.hs
  hs-source-dirs:      tests,dist/build/autogen
  ghc-options:         -Wall

  build-depends:       base == 4.*
                     , hspec
                     , vector
                     , img-vector
                     , QuickCheck
                     , hmatrix
  default-Language:    Haskell2010

